# RPC

./: CMakeLists.txt  README.md
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: calluserservice.cc
lib/include/: MprpcApplication.h  logger.h  mprpcchannel.h  mprpcconfig.h  rpcheader.pb.h
src/: CMakeLists.txt  logger.cc  mprpcApplication.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcconfig.h  rpcprovider.h
test/protobuf/: main.cc  test.pb.cc
